apps/base/household-budget-planner/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: household-budget-planner
  labels:
    app.kubernetes.io/name: household-budget-planner
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: household-budget-planner
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
